[gd_scene load_steps=6 format=3 uid="uid://g84j5n0swbk3"]

[ext_resource type="Script" path="res://scenes/ui/menus/comparison_menu/comparison_window.gd" id="1_0pp7g"]
[ext_resource type="PackedScene" uid="uid://c7xebheuu6ryc" path="res://scenes/ui/menus/comparison_menu/bodypart_container.tscn" id="2_vocxh"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_x8b2q"]
bg_color = Color(0.223103, 0.223103, 0.223103, 1)
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_s0dgx"]
bg_color = Color(0.151276, 0.151276, 0.151276, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="LabelSettings" id="LabelSettings_k1fla"]

[node name="ComparisonWindow" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_0pp7g")

[node name="ComparisonWindow" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -225.0
offset_top = -134.0
offset_right = 226.0
offset_bottom = 177.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_x8b2q")

[node name="MarginContainer" type="MarginContainer" parent="ComparisonWindow"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="ComparisonWindow/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="ComparisonWindow/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="CurrentContainerLeft" type="MarginContainer" parent="ComparisonWindow/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_right = 10

[node name="VBoxContainer" type="VBoxContainer" parent="ComparisonWindow/MarginContainer/VBoxContainer/HBoxContainer/CurrentContainerLeft"]
layout_mode = 2

[node name="CurrentBodypartContainerLeft" parent="ComparisonWindow/MarginContainer/VBoxContainer/HBoxContainer/CurrentContainerLeft/VBoxContainer" instance=ExtResource("2_vocxh")]
layout_mode = 2

[node name="EquipLeftButton" type="Button" parent="ComparisonWindow/MarginContainer/VBoxContainer/HBoxContainer/CurrentContainerLeft/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
text = "Equip"

[node name="NewContainer" type="MarginContainer" parent="ComparisonWindow/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_right = 10

[node name="VBoxContainer" type="VBoxContainer" parent="ComparisonWindow/MarginContainer/VBoxContainer/HBoxContainer/NewContainer"]
layout_mode = 2

[node name="NewBodypartContainer" parent="ComparisonWindow/MarginContainer/VBoxContainer/HBoxContainer/NewContainer/VBoxContainer" instance=ExtResource("2_vocxh")]
layout_mode = 2

[node name="DiscardButton" type="Button" parent="ComparisonWindow/MarginContainer/VBoxContainer/HBoxContainer/NewContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6
text = "Discard"

[node name="CurrentContainerRight" type="MarginContainer" parent="ComparisonWindow/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_right = 10

[node name="VBoxContainer" type="VBoxContainer" parent="ComparisonWindow/MarginContainer/VBoxContainer/HBoxContainer/CurrentContainerRight"]
layout_mode = 2

[node name="CurrentBodypartContainerRight" parent="ComparisonWindow/MarginContainer/VBoxContainer/HBoxContainer/CurrentContainerRight/VBoxContainer" instance=ExtResource("2_vocxh")]
layout_mode = 2

[node name="EquipRightButton" type="Button" parent="ComparisonWindow/MarginContainer/VBoxContainer/HBoxContainer/CurrentContainerRight/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
text = "Equip
"

[node name="TitleContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -93.0
offset_top = -152.0
offset_right = 95.0
offset_bottom = -119.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_s0dgx")

[node name="MarginContainer" type="MarginContainer" parent="TitleContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 5

[node name="Label" type="Label" parent="TitleContainer/MarginContainer"]
layout_mode = 2
text = "New Bodypart Found!"
label_settings = SubResource("LabelSettings_k1fla")

[connection signal="pressed" from="ComparisonWindow/MarginContainer/VBoxContainer/HBoxContainer/CurrentContainerLeft/VBoxContainer/EquipLeftButton" to="." method="_on_equip_left_button_pressed"]
[connection signal="pressed" from="ComparisonWindow/MarginContainer/VBoxContainer/HBoxContainer/NewContainer/VBoxContainer/DiscardButton" to="." method="_on_discard_button_pressed"]
[connection signal="pressed" from="ComparisonWindow/MarginContainer/VBoxContainer/HBoxContainer/CurrentContainerRight/VBoxContainer/EquipRightButton" to="." method="_on_equip_right_button_pressed"]
